v3.5.2 (XXXX-XX-XX)
-------------------

* Fixed issue #10090: fix repeatable seek to the same document in
  SEARCH operations for ArangoSearch views.

* Fixed issue #10193: Arangoexport does not handle line feeds when exporting as 
  csv.

* Removed debug log messages "found comm task ..." that could be logged
  on server shutdown.

* Fixed issue #10183: Arangoimport imports on _system when you try to 
  create a new database.

  This bugfix fixes the output of arangoimport, which could display a
  wrong target database for the import if the option `--create-database`
  was used.

* Fixed issue #10158: Invalid Query Crashes ArangoDB.

  This fixes traversal queries that are run on a static empty start vertex
  string.


v3.5.1 (2019-10-07)
-------------------

* Properly report parse errors for extraneous unterminated string literals
  at the end of AQL query strings. For example, in the query `RETURN 1 "abc`,
  the `RETURN 1` part was parsed fully, and the `"abc` part at the end was
  parsed until the EOF and then forgotten. But as the fully parsed tokens
  `RETURN 1` already form a proper query, the unterminated string literal
  at the end was not reported as a parse error.
  This is now fixed for unterminated string literals in double and single
  quotes as well as unterminated multi-line comments at the end of the query
  string.

* Fix config directory handling, so we don't trap into UNC path lookups on Windows.

* Ignore symlinks when copying JavaScript files at startup via the option
  `--javascript.copy-installation`. This potentially fixes the following
  error message at startup:

      Error copying JS installation files to '...': 
      failed to open source file ...: No such file or directory

* Added startup option `--cluster.max-number-of-shards` for restricting the 
  maximum number of shards when creating new collections. The default
  value for this setting is `1000`, which is also the previously hard-coded